[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hb-recon"
version = "1.0.4"
description = "Automated reconnaissance tool with AI report generation. Subdomain enumeration, endpoint crawling, and vulnerability pattern detection."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hlaing Bwar", email = "info@hlaingbwar.com"}
]
keywords = ["recon", "reconnaissance", "osint", "bug-bounty", "pentesting", "subdomain", "enumeration", "security", "ethical-hacking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
]

[project.urls]
Homepage = "https://github.com/infohlaingbwar/hb-recon"
Repository = "https://github.com/infohlaingbwar/hb-recon"
"Bug Tracker" = "https://github.com/infohlaingbwar/hb-recon/issues"

[project.scripts]
hb-recon = "hb_recon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hb_recon*"]
exclude = ["tests*", "docs*"]
